# Glubschauge

./: .gitignore  .gitmodules  Assets.h  CMakeLists.txt  FileSystem.h  FpsCounter.cpp  FpsCounter.h  Logger.h  README.md  android_build.sh  main.cpp
GlubschLib/: CMakeLists.txt  FpsCounter.cpp  FpsCounter.h  Logger.h  NumberSmoothing.h  logger.h
GlubschLib/cv/: BarrelCreation.cpp  BarrelCreation.h  FaceDetection.cpp  FaceDetection.h  FaceDistortion.cpp  FaceDistortion.h  FaceDistortionType.h  FlashEffect.cpp  FlashEffect.h  FpsEffect.cpp  GifCreate.cpp  GifCreate.h  GlubschEffect.cpp  GlubschEffect.h  ImageUtils.cpp  ImageUtils.h  MouthOpen.h  OutputDevice.cpp  OutputDevice.h  SaveUtils.cpp  SaveUtils.h  Utils2D.h  V4lLoopbackDevice.cpp  V4lLoopbackDevice.h
GlubschLib/magick/: GifContainer.cpp  GifContainer.h
ImageMagick/android/include/MagickCore/: magick-baseconfig.h
OCVHighGuiApp/: CMakeLists.txt  main.cpp  resource_help.h.in
QtApp/: CMakeLists.txt  appdata.qrc  icons.qrc  main.cpp  qml.qrc
QtApp/android/: AndroidManifest.xml
QtApp/android/res/xml/: qtprovider_paths.xml
QtApp/icons/: taken_from.txt
QtApp/qml/: CameraHandle.qml  MainView.qml  ScanningView.qml  SettingsView.qml  main.qml
QtApp/qt/: Application.cpp  Assets.cpp  Assets.h  FileSystem.cpp  FileSystem.h  ImageCapture.cpp  ImageCapture.h  ImageConvert.cpp  ImageTransform.h  ProcessingFilter.cpp  ProcessingFilter.h  VideoChooser.cpp
android/ImageMagick/include/MagickCore/: version.h
android/include/tbb/: tbb_config.h  tbb_machine.h
appData/: appdata.qrc
cv/: BarrelCreation.cpp  BarrelCreation.h  FaceDetection.cpp  FaceDetection.h  FpsEffect.h  GifCreate.cpp  GifCreate.h  GlubschEffect.h  ImageUtils.cpp  ImageUtils.h  MouthOpen.h  OutputDevice.cpp  OutputDevice.h
icons/: icons.qrc  taken_from.txt
magick/: GifContainer.cpp  GifContainer.h  GifCreate.cpp  GifCreate.h
qml/: ProcessingCameraView.qml  ScanningView.qml  SettingsView.qml  qml.qrc
qt/: Application.cpp  Application.h  Assets.cpp  FileSystem.cpp  FileSystem.h  ImageConvert.cpp  ImageConvert.h  ImageTransform.cpp  ImageTransform.h  Logger.h  ProcessingFilter.cpp  ProcessingFilter.h  VideoChooser.cpp  VideoChooser.h
